# window-data-collection

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: example.rs  lib.rs
src/daemon/: mod.rs
src/daemon/collection/: collector.rs
src/utils/: dir.rs  logging.rs
src/window_api/: ext_list_wayland.rs  gnome_wayland.rs  kde_wayland.js  kde_wayland.rs  macos.rs  mod.rs  process_name.rs  test.rs  win.rs  wl_connection.rs  wlr_management_wayland.rs  wrl_wayland.rs  x11.rs
