[package]
name = "window-data-collecting"
version = "0.2.3"
authors = ["Andrii Zahorulko"]
description = "Utilities for collecting window data"
license = "MPL-2.0"
edition = "2021"
categories = []
rust-version = "1.80.1"


[dependencies]

anyhow = { version = "1.0.95", features = ["backtrace"] }

serde = { version = "1.0.217", features = ["derive", "rc", "std"] }
serde_json = "1.0.135"

tracing = { version = "0.1.41", features = ["attributes"] }

tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

sysinfo = "0.33.1"

cfg-if = "1.0.0"

zbus = { version = "5.5.0", optional = true }

objc2-foundation = { version = "0.3.1", optional = true, features = [
	"NSDictionary",
	"NSString",
	"NSAppleScript",
	"NSURL",
] }

objc2 = { version = "0.6.1", optional = true }

thiserror = "2.0.12"

[dependencies.xcb]
version = "^1.5"
features = ["screensaver"]
optional = true

[dependencies.windows]
version = "0.58.0"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_SystemInformation",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_SystemServices",
]
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.17.1"

[features]
win = ["dep:windows"]
x11 = ["dep:xcb"]
kde_wlnd = ["dep:zbus"]
gnome_wlnd = ["dep:zbus"]
macos = ["dep:objc2-foundation", "dep:objc2"]
wlr_wlnd = []
ext_wlnd = []

[[bin]]
name = "example"
path = "src/example.rs"
